@@ -4,6 +4,8 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.4'
     id "org.asciidoctor.jvm.convert" version "4.0.2"
     id 'org.asciidoctor.editorconfig' version '4.0.2'
+
+//    id 'org.asciidoctor.jvm.pdf' version '4.0.2' rest doc pdf 필요시 활성화
 }
 
 
@@ -28,6 +30,7 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -36,18 +39,15 @@ dependencies {
     implementation 'org.springframework:spring-context-support'
 
     //web
+    implementation 'org.thymeleaf:thymeleaf-spring6'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
-    implementation 'org.springframework.boot:spring-boot-devtools'
-    implementation 'org.thymeleaf:thymeleaf-spring6'
 
     //image
     implementation 'org.springframework.integration:spring-integration-sftp'
     implementation 'com.github.mwiede:jsch:0.2.17'
 
     //auth
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
     implementation 'org.jasypt:jasypt:1.9.3'
 
@@ -121,8 +121,4 @@ asciidoctor.doLast {
 
 sourceSets.main.resources.srcDirs += 'build/generated-snippets/'
 
-tasks.withType(Jar) {
-    manifest {
-        attributes["Add-Opens"] = "java.base/java.io java.base/sun.nio.ch"
-    }
-}
+
